fix: mobile view menu positioning now on right side of view without gap

--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -115,7 +115,7 @@
   background: var(--off-white);
   width: 0%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0px;
   right: 0px;
 
